Use `getFirst` and `getLast` for sequenced collections