@@ -322,8 +322,8 @@ public class StatisticsManager implements IStatisticsManager {
                 for (AudienceContext audience : questionPageDTO.getAudience()) {
                     // Check the question has both a stage and a difficulty
                     if (audience.getStage() != null && audience.getDifficulty() != null) {
-                        Stage currentStage = audience.getStage().get(0);
-                        Difficulty currentDifficulty = audience.getDifficulty().get(0);
+                        Stage currentStage = audience.getStage().getFirst();
+                        Difficulty currentDifficulty = audience.getDifficulty().getFirst();
                         // Count the attempt at the question
                         if (questionAttemptsByStageAndDifficultyStats.containsKey(currentStage)) {
                             if (questionAttemptsByStageAndDifficultyStats.get(currentStage).containsKey(currentDifficulty)) {
